<resources>
    <string name="app_name">Poupanca</string>
    <string name="Vlrinicial">Valor Inicial</string>
    <string name="AM">Aplicação Mensal</string>
    <string name="TA">Tempo de  aplicação</string>
    <string name="Txa">Taxa</string>
    <string name="EmMeses">Em meses</string>
    <string name="Vlrem">Valor em R$ Ex: 1700.00</string>
    <string name="BtnCal">Calcular</string>

    <string name="Consumototal">Consumo total R$:</string>
    <string name="Couvertartistico">Couver artistíco R$:</string>
    <string name="divideconta">Dividir conta por:</string>
    <string name="taxaservico">Taxa de serviço (10%) R$</string>
    <string name="contatotal">Conta total R$: </string>
    <string name="Vlrpessoa">Valor por pessoa R$:</string>
    <string name="Calcularcontafinal">Calcular conta final</string>
    <string name="Balaiolenha" translatable="false">BalaioDeLenha</string>
    <string name="transito" translatable="false">Quiz de trânsito</string>

</resources>