<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Restaurante"
    android:background="#EE7600">

    <LinearLayout
        android:layout_marginTop="10px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contatotal" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginLeft="215px"
            android:background="#ffffff"
            android:inputType="textPersonName"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Couvertartistico" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginLeft="135px"
            android:background="#ffffff"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/divideconta" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginLeft="180px"
            android:background="#ffffff"
            android:inputType="textPersonName"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Calcularcontafinal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/taxaservico" />
        <EditText
            android:id="@+id/editTextTextPersonName9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginLeft="50px"
            android:background="#ffffff"
            android:inputType="textPersonName"/>

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contatotal" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginLeft="220px"
            android:background="#ffffff"
            android:inputType="textPersonName"/>

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Vlrpessoa" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginLeft="121px"
            android:background="#ffffff"
            android:inputType="textPersonName"/>

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="50px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>

    <ImageView
        android:layout_margin="50px"
        android:id="@+id/imageView4"
        android:layout_width="373dp"
        android:layout_height="258dp"
        app:srcCompat="@drawable/logo_balaio" />

</LinearLayout>
